# fai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  REQUIREMENTS.md  pyproject.toml
fai/: __init__.py  __main__.py  cli.py  logging.py  retry.py  types.py  validation.py
fai/dialogue/: __init__.py  generate.py  trimming.py
fai/motion/: __init__.py  animate.py  backend.py  sadtalker.py  wav2lip.py
fai/orchestrator/: __init__.py  loop.py
fai/perception/: __init__.py  record.py  transcribe.py
fai/recording/: __init__.py  record.py
fai/render/: __init__.py  display.py
fai/voice/: __init__.py  playback.py  synthesize.py
scripts/: auto-progress.sh
tests/: conftest.py  helpers.py  test_cli.py  test_dialogue.py  test_logging.py  test_motion.py  test_orchestrator.py  test_perception.py  test_recording.py  test_render.py  test_retry.py  test_sadtalker.py  test_streaming.py  test_trimming.py  test_validation.py  test_voice.py  test_wav2lip.py
